@@ -2,20 +2,33 @@ package com.mineserve.mobile.runtime
 
 import android.content.Context
 import android.util.Log
+import android.system.Os
+import com.mineserve.mobile.data.InstallStep
+import com.mineserve.mobile.data.JavaVersion
+import com.mineserve.mobile.data.ServerCore
+import com.mineserve.mobile.data.StepState
+import com.mineserve.mobile.data.StepStatus
 import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.delay
 import kotlinx.coroutines.flow.SharedFlow
+import kotlinx.coroutines.runBlocking
 import kotlinx.coroutines.withContext
 import kotlinx.coroutines.withTimeoutOrNull
 import java.io.File
+import java.io.BufferedInputStream
 import java.io.FileInputStream
 import java.io.FileOutputStream
 import java.io.OutputStream
+import java.net.HttpURLConnection
+import java.net.URL
 import java.text.SimpleDateFormat
 import java.util.Date
 import java.util.Locale
+import java.util.concurrent.TimeUnit
 import java.util.zip.ZipEntry
 import java.util.zip.ZipOutputStream
+import org.apache.commons.compress.archivers.tar.TarArchiveInputStream
+import org.apache.commons.compress.compressors.gzip.GzipCompressorInputStream
 
 /**
  * Termux 运行时（去 tmux 化，参考 MC-Minder 思路直接管理进程）：
@@ -29,8 +42,17 @@ import java.util.zip.ZipOutputStream
  */
 class TermuxRuntime(context: Context) {
 
+    private val appContext = context.applicationContext
     internal val installer = BootstrapInstaller(context)
     private val executor = CommandExecutor(installer)
+
+    private val java8Rootfs: File
+        get() = File(installer.rootDir, "var/lib/mineserve/java8-ubuntu-rootfs")
+
+    private val java8ReadyMarker: File
+        get() = File(installer.rootDir, "java-8-ubuntu-ready")
+
+    private val ubuntuJava8Home = "/usr/lib/jvm/java-8-openjdk-arm64"
 
     /** MC 服务器进程（null 表示未启动） */
     @Volatile
@@ -113,8 +135,665 @@ class TermuxRuntime(context: Context) {
         return if (resolved != "java") resolved else null
     }
 
+    fun isJavaInstalled(version: JavaVersion): Boolean = if (version == JavaVersion.Java8) {
+        java8UbuntuReady()
+    } else {
+        javaCandidates(version).any {
+            File(it, "bin/java").exists() && File(it, "bin/java").canExecute()
+        }
+    }
+
+    fun installedJavaVersions(): Set<JavaVersion> = JavaVersion.values().filter(::isJavaInstalled).toSet()
+
+    fun installedDependencySteps(): List<StepState> = InstallStep.values().map { step ->
+        StepState(step, if (isDependencyInstalled(step)) StepStatus.Done else StepStatus.Wait)
+    }
+
+    fun isDependencyInstalled(step: InstallStep): Boolean {
+        val prefix = installer.rootDir
+        fun hasExecutable(vararg paths: String) = paths.any { path ->
+            File(prefix, path).let { it.isFile && it.canExecute() }
+        }
+        return when (step) {
+            InstallStep.Jdk -> isJavaInstalled(JavaVersion.Java17)
+            InstallStep.Wget -> hasExecutable("bin/wget", "usr/bin/wget", "data/data/com.termux/files/usr/bin/wget") &&
+                File(prefix, "etc/fonts/fonts.conf").isFile
+            InstallStep.Frp -> hasExecutable("bin/frpc", "usr/bin/frpc", "data/data/com.termux/files/usr/bin/frpc")
+            InstallStep.Rclone -> hasExecutable("bin/rclone", "usr/bin/rclone", "data/data/com.termux/files/usr/bin/rclone")
+            InstallStep.Proot -> hasExecutable("bin/proot", "usr/bin/proot")
+        }
+    }
+
+    fun isCommandInstalled(command: String): Boolean {
+        val prefix = installer.rootDir
+        return listOf(
+            File(prefix, "bin/$command"),
+            File(prefix, "usr/bin/$command"),
+            File(prefix, "data/data/com.termux/files/usr/bin/$command")
+        ).any { it.isFile && it.canExecute() }
+    }
+
+    /** Read-only checks used by the dashboard diagnostic screen. */
+    fun javaRuntimeDiagnostic(version: JavaVersion): Pair<Boolean, String> = when (version) {
+        JavaVersion.Java8 -> {
+            val rootfsReady = hasUsableUbuntuShell(java8Rootfs)
+            val ready = java8UbuntuReady()
+            when {
+                ready -> true to "Ubuntu ARM64 container and openjdk-8-jdk are ready"
+                !rootfsReady -> false to "Ubuntu ARM64 container shell is unavailable"
+                else -> false to "openjdk-8-jdk is incomplete or has not passed verification"
+            }
+        }
+        else -> {
+            val ready = isJavaInstalled(version) && isJavaComplete(version)
+            ready to if (ready) "${version.displayName} runtime is executable" else "${version.displayName} runtime is missing or incomplete"
+        }
+    }
+
+    fun needsFontRuntime(core: ServerCore): Boolean = core == ServerCore.Forge || core == ServerCore.NeoForge
+
+    fun fontRuntimeReady(version: JavaVersion): Boolean = if (version == JavaVersion.Java8) {
+        hasUsableUbuntuShell(java8Rootfs) && runUbuntu(
+            "test -f /etc/fonts/fonts.conf && test -x /usr/bin/fc-cache",
+            15_000
+        ) == 0
+    } else {
+        File(installer.rootDir, "etc/fonts/fonts.conf").isFile && isCommandInstalled("fc-cache")
+    }
+
+    /** Rebuild fontconfig with the resolved executable path rather than PATH lookup. */
+    private fun rebuildTermuxFontCache(): Boolean {
+        val prefix = installer.rootDir
+        val cache = listOf(
+            File(prefix, "bin/fc-cache"),
+            File(prefix, "usr/bin/fc-cache"),
+            File(prefix, "data/data/com.termux/files/usr/bin/fc-cache")
+        ).firstOrNull { it.isFile && it.canExecute() } ?: run {
+            emitLog("[repair] 字体缓存命令 fc-cache 未安装或不可执行")
+            return false
+        }
+        val code = execOnce(cache.absolutePath, "-f")
+        val ready = code == 0 && File(prefix, "etc/fonts/fonts.conf").isFile
+        emitLog(if (ready) "[repair] 字体缓存已生成" else "[repair] 字体缓存生成失败(exit=$code)，请在运行诊断中查看命令状态")
+        return ready
+    }
+
+    fun repairFontRuntime(): Boolean {
+        if (!isReady()) return false
+        val prefix = installer.rootDir
+        if (!File(prefix, "etc/fonts/fonts.conf").isFile || !isCommandInstalled("fc-cache")) {
+            emitLog("[repair] 正在补齐字体运行库...")
+            execOnce(
+                "apt-get", "-o", "DPkg::Lock::Timeout=60", "install",
+                "--allow-unauthenticated", "-y", "fontconfig", "ttf-dejavu"
+            )
+            repairInstalledCommands()
+        }
+        return rebuildTermuxFontCache()
+    }
+
+    suspend fun installJava(version: JavaVersion): Boolean = withContext(Dispatchers.IO) {
+        if (!isReady()) throw RuntimeException("Termux 环境未初始化")
+        if (version == JavaVersion.Java8) {
+            return@withContext installJava8Ubuntu()
+        }
+        emitLog("[java] 正在安装 ${version.displayName}")
+        emitLog("[java] ${version.displayName} 正在下载并配置，首次安装可能需要数分钟")
+        val code = execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "install", "--allow-unauthenticated", "-y", version.packageName)
+        if (code == 0) fixJavaSymlinks(version)
+        val installed = code == 0 && isJavaInstalled(version)
+        emitLog(if (installed) "[java] ${version.displayName} 安装完成" else "[java] ${version.displayName} 安装失败")
+        installed
+    }
+
+    /** Install Java 8 inside the Ubuntu ARM64 glibc container. */
+    private suspend fun installJava8Ubuntu(): Boolean {
+        val marker = java8ReadyMarker
+        if (java8UbuntuReady()) {
+            emitLog("[java] Ubuntu ARM64 glibc Java 8 已安装，跳过重复下载")
+            return true
+        }
+        emitLog("[java] 注意：正在 Ubuntu ARM64 glibc 环境安装 Java 8，非 Termux 官方源")
+        emitLog("[java] Java 8 仅在 Ubuntu 内运行，不会修改 Java 17/25")
+        marker.delete()
+        return try {
+            if (!prepareUbuntuRuntime()) {
+                throw IllegalStateException("Ubuntu 容器无法启动，请先修复运行环境")
+            }
+            emitLog("[java] 正在 Ubuntu 中安装 ARM64 glibc Java 8，首次安装可能需要数分钟")
+            val code = runUbuntu(
+                ubuntuJava8InstallCommand(),
+                timeoutMs = 900_000
+            )
+            if (code != 0) throw IllegalStateException("Ubuntu 内 Java 8 校验失败（exit=$code）")
+            marker.writeText("ubuntu-focal-arm64-openjdk8\n")
+            emitLog("[java] Ubuntu ARM64 glibc Java 8 安装并校验完成")
+            true
+        } catch (e: Exception) {
+            marker.delete()
+            emitLog("[java] Ubuntu Java 8 安装失败：${e.message}")
+            false
+        }
+    }
+
+    private fun ubuntuJava8InstallCommand(): String = """
+        install_openjdk8() {
+          mirror="${'$'}1"
+          echo "[java] Ubuntu APT 源: ${'$'}mirror"
+          printf '%s\n' \
+            "deb ${'$'}mirror focal main restricted universe multiverse" \
+            "deb ${'$'}mirror focal-updates main restricted universe multiverse" \
+            "deb ${'$'}mirror focal-security main restricted universe multiverse" \
+            > /etc/apt/sources.list
+          rm -rf /var/lib/apt/lists/*
+          if apt-get update -o Acquire::Retries=2 -o Acquire::http::Timeout=30 -o Acquire::https::Timeout=30 && \
+            apt-get install -y --no-install-recommends openjdk-8-jdk ca-certificates fontconfig fonts-dejavu-core; then
+            test -x /usr/bin/java && /usr/bin/java -version 2>&1 | grep -q '1\.8\.'
+            return ${'$'}?
+          fi
+          return 1
+        }
+        install_openjdk8 http://mirrors.tuna.tsinghua.edu.cn/ubuntu-ports || \
+          install_openjdk8 http://mirrors.ustc.edu.cn/ubuntu-ports || \
+          install_openjdk8 http://ports.ubuntu.com/ubuntu-ports
+    """.trimIndent()
+
+    private fun java8UbuntuReady(): Boolean {
+        val rootfs = java8Rootfs
+        val javaHome = File(rootfs, ubuntuJava8Home.removePrefix("/"))
+        val jvmLibrary = listOf(
+            File(javaHome, "jre/lib/aarch64/server/libjvm.so"),
+            File(javaHome, "lib/server/libjvm.so")
+        ).any { it.isFile }
+        return java8ReadyMarker.isFile &&
+            listOf(File(javaHome, "jre/bin/java"), File(javaHome, "bin/java")).any { it.isFile } &&
+            jvmLibrary
+    }
+
+    private fun prepareUbuntuRuntime(): Boolean {
+        var code = execOnce(
+            "apt-get", "-o", "DPkg::Lock::Timeout=60", "install",
+            "--allow-unauthenticated", "-y", "proot"
+        )
+        if (code != 0) return false
+        fixUsrBin()
+        fixScriptsOnce()
+        ensureRootfsExecutable()
+        repairProotLibraries()
+        installProotLauncher()
+        ensureRootfsExecutable()
+        if (!verifyProot()) return false
+
+        if (runUbuntu("test -x /bin/sh && exit 0", 60_000) == 0) return true
+        if (!installUbuntuBaseRootfs()) {
+            emitLog("[java] Java 8 专用 Ubuntu rootfs 无法重建；旧的 Debian/Ubuntu 容器和服务器数据未被修改")
+            return false
+        }
+        emitLog("[java] 正在部署 Ubuntu ARM64 rootfs，首次安装需要较长时间")
+        return runUbuntu("test -x /bin/sh && exit 0", 60_000) == 0
+    }
+
+    /**
+     * Uses the Ubuntu Base image instead of proot-distro's Docker Hub image.
+     * Docker Hub commonly returns HTTP 429 on mobile networks; the two URLs
+     * below are ordinary Ubuntu archive endpoints and do not require an account.
+     */
+    private fun installUbuntuBaseRootfs(): Boolean {
+        if (hasUsableUbuntuShell(java8Rootfs)) return true
+
+        val archiveName = "ubuntu-base-20.04.5-base-arm64.tar.gz"
+        val archive = File(installer.tmpDir, archiveName)
+        val urls = listOf(
+            "https://mirrors.tuna.tsinghua.edu.cn/ubuntu-cdimage/ubuntu-base/releases/20.04/release/$archiveName",
+            "https://mirrors.ustc.edu.cn/ubuntu-cdimage/ubuntu-base/releases/20.04/release/$archiveName",
+            "https://cdimage.ubuntu.com/ubuntu-base/releases/20.04/release/$archiveName"
+        )
+        return try {
+            emitLog("[java] 正在下载 Ubuntu 20.04 ARM64 基础 rootfs（非 Docker Hub）")
+            archive.delete()
+            var lastError: Exception? = null
+            for (url in urls) {
+                try {
+                    emitLog("[java] Ubuntu rootfs source: $url")
+                    downloadUbuntuRootfs(url, archive)
+                    if (isPlausibleUbuntuArchive(archive)) break
+                    throw IllegalStateException("Ubuntu rootfs download is incomplete")
+                } catch (e: Exception) {
+                    lastError = e
+                    archive.delete()
+                    emitLog("[java] Ubuntu rootfs source failed: ${e.message}")
+                }
+            }
+            if (!isPlausibleUbuntuArchive(archive)) {
+                throw lastError ?: IllegalStateException("Ubuntu rootfs download failed")
+            }
+
+            // This is the dedicated Java 8 rootfs only.  Never touch legacy
+            // proot-distro containers, server files, worlds, plugins, or config.
+            java8Rootfs.deleteRecursively()
+            java8Rootfs.mkdirs()
+            extractUbuntuRootfs(archive, java8Rootfs)
+            repairUbuntuRootfs()
+            if (!hasUsableUbuntuShell(java8Rootfs)) {
+                throw IllegalStateException("Ubuntu rootfs is missing an executable shell")
+            }
+            emitLog("[java] Ubuntu ARM64 rootfs is ready")
+            true
+        } catch (e: Exception) {
+            java8Rootfs.deleteRecursively()
+            emitLog("[java] Ubuntu rootfs installation failed: ${e.message}")
+            false
+        } finally {
+            archive.delete()
+        }
+    }
+
+    private fun hasUsableUbuntuShell(rootfs: File): Boolean =
+        listOf("bin/sh", "bin/bash", "usr/bin/bash")
+            .map { File(rootfs, it) }
+            .any { it.isFile && it.canExecute() }
+
+    private fun isPlausibleUbuntuArchive(archive: File): Boolean {
+        if (!archive.isFile || archive.length() < 20L * 1024 * 1024) return false
+        return FileInputStream(archive).use { input ->
+            input.read() == 0x1f && input.read() == 0x8b
+        }
+    }
+
+    private fun downloadUbuntuRootfs(url: String, target: File) {
+        val connection = (URL(url).openConnection() as HttpURLConnection).apply {
+            connectTimeout = 20_000
+            readTimeout = 60_000
+            instanceFollowRedirects = true
+            setRequestProperty("User-Agent", "MineServeMobile/1.0")
+        }
+        try {
+            connection.connect()
+            if (connection.responseCode !in 200..299) {
+                throw IllegalStateException("HTTP ${connection.responseCode}")
+            }
+            val total = connection.contentLengthLong
+            var downloaded = 0L
+            var lastPercent = -1
+            connection.inputStream.use { input ->
+                FileOutputStream(target).use { output ->
+                    val buffer = ByteArray(64 * 1024)
+                    while (true) {
+                        val count = input.read(buffer)
+                        if (count < 0) break
+                        output.write(buffer, 0, count)
+                        downloaded += count
+                        if (total > 0) {
+                            val percent = (downloaded * 100 / total).toInt()
+                            if (percent / 10 != lastPercent / 10) {
+                                lastPercent = percent
+                                emitLog("[java] Ubuntu rootfs download: $percent%")
+                            }
+                        }
+                    }
+                }
+            }
+        } finally {
+            connection.disconnect()
+        }
+    }
+
+    private fun extractUbuntuRootfs(archive: File, destination: File) {
+        FileInputStream(archive).use { fileInput ->
+            GzipCompressorInputStream(BufferedInputStream(fileInput)).use { gzip ->
+                TarArchiveInputStream(gzip).use { tar ->
+                    var entry = tar.nextTarEntry
+                    while (entry != null) {
+                        val output = File(destination, entry.name)
+                        val rootPath = destination.canonicalPath + File.separator
+                        if (!output.canonicalPath.startsWith(rootPath)) {
+                            throw IllegalStateException("Unsafe Ubuntu rootfs path: ${entry.name}")
+                        }
+                        when {
+                            entry.isDirectory -> output.mkdirs()
+                            entry.isSymbolicLink -> {
+                                output.parentFile?.mkdirs()
+                                output.delete()
+                                Os.symlink(entry.linkName, output.absolutePath)
+                            }
+                            entry.isLink -> {
+                                val source = File(destination, entry.linkName)
+                                output.parentFile?.mkdirs()
+                                output.delete()
+                                if (source.isFile) source.copyTo(output, overwrite = true)
+                            }
+                            else -> {
+                                output.parentFile?.mkdirs()
+                                FileOutputStream(output).use { tar.copyTo(it) }
+                                if ((entry.mode and 0b001_001_001) != 0) output.setExecutable(true, false)
+                            }
+                        }
+                        entry = tar.nextTarEntry
+                    }
+                }
+            }
+        }
+    }
+
+    private fun prootEnvironment(): Map<String, String> {
+        val prefix = installer.rootDir.absolutePath
+        val tmp = File(installer.rootDir, "tmp").apply { mkdirs() }.absolutePath
+        return mapOf(
+            "PROOT_TMP_DIR" to tmp,
+            "TMPDIR" to tmp,
+            "TERMUX_PREFIX" to prefix,
+            "TERMUX_HOME" to "$prefix/home",
+            "TERMUX__PREFIX" to prefix,
+            "TERMUX__HOME" to "$prefix/home",
+            "TERMUX_APP_PACKAGE" to "com.mineserve.mobile",
+            "TERMUX_APP__PACKAGE_NAME" to "com.mineserve.mobile",
+            "PROOT_LOADER" to "$prefix/libexec/proot/loader",
+            "PROOT_LOADER_32" to "$prefix/libexec/proot/loader32",
+            "TERMUX_VERSION" to "mineServe"
+        )
+    }
+
+    private fun runUbuntu(
+        command: String,
+        timeoutMs: Long = 120_000,
+        extraBinds: List<String> = emptyList()
+    ): Int =
+        if (!repairUbuntuRootfs()) {
+            emitLog("[java] Ubuntu rootfs 缺少可执行 shell，无法启动")
+            126
+        } else {
+            val rootfs = java8Rootfs
+            val shm = File(rootfs, "tmp").apply { mkdirs() }
+            val resolver = prepareUbuntuDns(rootfs)
+            val args = mutableListOf(
+                "proot",
+                "--kill-on-exit",
+                "--link2symlink",
+                "--sysvipc",
+                "-L",
+                "--change-id=0:0",
+                "--rootfs=${rootfs.absolutePath}",
+                "--cwd=/root",
+                "--bind=/dev",
+                "--bind=/proc",
+                "--bind=/sys",
+                "--bind=/dev/urandom:/dev/random",
+                "--bind=${shm.absolutePath}:/dev/shm",
+                "--bind=${resolver.absolutePath}:/etc/resolv.conf"
+            )
+            extraBinds.forEach { args += "--bind=$it" }
+            args += listOf(
+                "/usr/bin/env",
+                "-i",
+                "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+                "HOME=/root",
+                "TMPDIR=/tmp",
+                "LANG=C.UTF-8",
+                "DEBIAN_FRONTEND=noninteractive",
+                "/bin/sh",
+                "-c",
+                command
+            )
+            execOnceWithTimeout(timeoutMs, *args.toTypedArray(), env = prootEnvironment())
+        }
+
+    /** Give the isolated Ubuntu rootfs Android's active DNS servers. */
+    private fun prepareUbuntuDns(rootfs: File): File {
+        val addresses = (1..4).mapNotNull { index ->
+            readAndroidDns("net.dns$index").takeIf { it.isNotBlank() && it.none(Char::isWhitespace) }
+        }.distinct()
+        val nameservers = if (addresses.isNotEmpty()) addresses else listOf("223.5.5.5", "119.29.29.29")
+        val content = nameservers.joinToString(separator = "\n", postfix = "\n") { "nameserver $it" }
+        val resolver = File(installer.tmpDir, "java8-resolv.conf")
+        resolver.parentFile?.mkdirs()
+        resolver.writeText(content)
+
+        // Ubuntu Base ships /etc/resolv.conf as a systemd-resolved symlink.
+        // The target does not exist in this PRoot container, so replace it with
+        // a regular file before binding the same resolver for every invocation.
+        val guestResolver = File(rootfs, "etc/resolv.conf")
+        guestResolver.delete()
+        guestResolver.parentFile?.mkdirs()
+        guestResolver.writeText(content)
+        return resolver
+    }
+
+    private fun readAndroidDns(property: String): String = runCatching {
+        val process = ProcessBuilder("/system/bin/getprop", property)
+            .redirectErrorStream(true)
+            .start()
+        val value = process.inputStream.bufferedReader().use { it.readText().trim() }
+        if (!process.waitFor(2, TimeUnit.SECONDS)) process.destroyForcibly()
+        value
+    }.getOrDefault("")
+
+    /** Restore executable bits lost while proot-distro applies a rootfs layer. */
+    private fun repairUbuntuRootfs(): Boolean {
+        val rootfs = java8Rootfs
+        if (!rootfs.isDirectory) return false
+        var fixed = 0
+        val visited = mutableSetOf<String>()
+        val commandDirs = listOf("bin", "sbin", "usr/bin", "usr/sbin")
+        commandDirs.forEach { relative ->
+            File(rootfs, relative).listFiles()?.forEach { file ->
+                if (!file.isFile || !visited.add(file.canonicalPath)) return@forEach
+                if (!file.canExecute() && file.setExecutable(true, false)) fixed++
+            }
+        }
+        val chmodTargets = commandDirs.map { File(rootfs, it) }.filter { it.exists() }
+        if (chmodTargets.isNotEmpty()) {
+            val targetArgs = chmodTargets.joinToString(" ") { "'${it.absolutePath.replace("'", "'\\''")}'" }
+            runCatching {
+                val chmod = ProcessBuilder("/system/bin/sh", "-c", "chmod -R 755 $targetArgs")
+                    .redirectErrorStream(true)
+                    .start()
+                val output = chmod.inputStream.bufferedReader().use { it.readText() }
+                if (chmod.waitFor(30, TimeUnit.SECONDS) && chmod.exitValue() == 0) {
+                    if (output.isNotBlank()) Log.d(TAG, "repairUbuntuRootfs chmod: $output")
+                } else {
+                    chmod.destroyForcibly()
+                    Log.w(TAG, "repairUbuntuRootfs: chmod failed")
+                }
+            }.onFailure { Log.w(TAG, "repairUbuntuRootfs: chmod exception: ${it.message}") }
+        }
+        listOf(
+            "lib/ld-linux-aarch64.so.1",
+            "lib/aarch64-linux-gnu/ld-linux-aarch64.so.1"
+        ).forEach { relative ->
+            val loader = File(rootfs, relative)
+            if (loader.isFile && !loader.canExecute() && loader.setExecutable(true, false)) fixed++
+        }
+        if (fixed > 0) emitLog("[bootstrap] 修复 $fixed 个 Ubuntu rootfs 命令可执行权限")
+        return listOf("bin/sh", "bin/bash", "usr/bin/bash")
+            .map { File(rootfs, it) }
+            .any { it.isFile && it.canExecute() }
+    }
+
+    /** Run a Java 8 installer inside Ubuntu with only the selected server bound in. */
+    fun runJava8Installer(jarPath: String, serverDir: File, timeoutMs: Long = 900_000): Int {
+        val guestDir = "/srv/mineserve"
+        val guestJar = "$guestDir/${File(jarPath).relativeTo(serverDir).invariantSeparatorsPath}"
+        val command = "export JAVA_HOME=$ubuntuJava8Home; " +
+            "export TMPDIR=/tmp; export HOME=/root; cd '$guestDir' && " +
+            "exec /usr/bin/java -Djava.io.tmpdir=/tmp -jar '$guestJar' " +
+            "--installServer"
+        return execUbuntuBound(
+            serverDir,
+            command,
+            timeoutMs
+        )
+    }
+
+    /** Execute a caller-provided Java 8 setup command inside the Ubuntu container. */
+    fun runJava8Command(serverDir: File, command: String, timeoutMs: Long = 900_000): Int =
+        execUbuntuBound(serverDir, command, timeoutMs)
+
+    private fun execUbuntuBound(serverDir: File, command: String, timeoutMs: Long): Int {
+        return runUbuntu(
+            command,
+            timeoutMs,
+            extraBinds = listOf("${serverDir.absolutePath}:/srv/mineserve")
+        )
+    }
+
+    suspend fun clearAndReinstallJava(): Boolean = withContext(Dispatchers.IO) {
+        if (!isReady()) throw RuntimeException("Termux 环境未初始化")
+        val versionsToRestore = installedJavaVersions()
+        if (versionsToRestore.isEmpty()) return@withContext true
+        emitLog("[java] 正在清除并重装 ${versionsToRestore.joinToString { it.displayName }}")
+        versionsToRestore.forEach { version ->
+            if (version != JavaVersion.Java8) {
+                execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "remove", "-y", version.packageName)
+            }
+            javaCandidates(version).forEach { File(it).deleteRecursively() }
+            if (version == JavaVersion.Java8) {
+                java8ReadyMarker.delete()
+                File(installer.rootDir, "java-8-android-ready").delete()
+                File(installer.rootDir, "lib/jvm/java-8-android").deleteRecursively()
+                java8Rootfs.deleteRecursively()
+            }
+        }
+        File(installer.rootDir, "bin/java").delete()
+        versionsToRestore.sortedBy { it.ordinal }.all { installJava(it) }
+    }
+
+    private fun javaCandidates(version: JavaVersion): List<String> {
+        val prefix = installer.rootDir.absolutePath
+        if (version == JavaVersion.Java8) {
+            return emptyList()
+        }
+        val candidates = mutableListOf(
+            "$prefix/lib/jvm/${version.directoryName}",
+            "$prefix/data/data/com.termux/files/usr/lib/jvm/${version.directoryName}"
+        )
+        return candidates
+    }
+
+    private fun repairProotLibraries(): Boolean {
+        val prefix = installer.rootDir
+        val targetDir = File(prefix, "lib").apply { mkdirs() }
+        val sources = listOf(
+            File(prefix, "usr/lib/libtalloc.so.2"),
+            File(prefix, "data/data/com.termux/files/usr/lib/libtalloc.so.2"),
+            File(prefix, "usr/lib/libtalloc.so.2.4.3"),
+            File(prefix, "data/data/com.termux/files/usr/lib/libtalloc.so.2.4.3")
+        )
+        val target = File(targetDir, "libtalloc.so.2")
+        if (!target.isFile) {
+            val source = sources.firstOrNull { it.isFile }
+            if (source != null) runCatching { source.copyTo(target, overwrite = false) }
+        }
+        val repaired = target.isFile
+        emitLog(
+            if (repaired) "[bootstrap] proot 依赖已就绪: libtalloc.so.2"
+            else "[bootstrap] 警告: proot 依赖 libtalloc.so.2 未找到"
+        )
+        return repaired
+    }
+
+    /**
+     * proot-distro sanitizes LD_LIBRARY_PATH before it invokes proot.  The app's
+     * rootfs is relocated, so proot cannot rely on Termux's normal ELF rpath.
+     * Keep the actual binary aside and expose a tiny launcher which restores the
+     * required library path for both direct and proot-distro invocations.
+     */
+    private fun installProotLauncher() {
+        val prefix = installer.rootDir.absolutePath
+        val launcher = File(prefix, "bin/proot")
+        val binary = File(prefix, "bin/proot.bin")
+        if (!launcher.isFile && !launcher.exists()) return
+
+        // A prior install may replace the launcher with the package's ELF again.
+        // Rename only ELF files; never rename our shell launcher on repeated runs.
+        val isElf = runCatching {
+            launcher.inputStream().use { input ->
+                val header = ByteArray(4)
+                input.read(header) == 4 && header.contentEquals(byteArrayOf(0x7f, 'E'.code.toByte(), 'L'.code.toByte(), 'F'.code.toByte()))
+            }
+        }.getOrDefault(false)
+        if (isElf) {
+            if (binary.exists()) binary.delete()
+            if (!launcher.renameTo(binary)) {
+                emitLog("[bootstrap] 警告: 无法创建 proot 启动包装")
+                return
+            }
+        }
+        if (!binary.isFile) return
+        binary.setExecutable(true, false)
+        val compatUsrLib = "$prefix/data/data/com.termux/files/usr/lib"
+        launcher.writeText(
+            "#!/system/bin/sh\n" +
+                "export PROOT_TMP_DIR='$prefix/tmp'\n" +
+                "export TMPDIR='$prefix/tmp'\n" +
+                "export PROOT_LOADER='$prefix/libexec/proot/loader'\n" +
+                "export PROOT_LOADER_32='$prefix/libexec/proot/loader32'\n" +
+                "export LD_LIBRARY_PATH='$prefix/lib:$prefix/usr/lib:$compatUsrLib:/system/lib64'\n" +
+                "exec '$binary' \"${'$'}@\"\n"
+        )
+        launcher.setExecutable(true, false)
+        emitLog("[bootstrap] 已固定 proot 动态库启动环境")
+    }
+
+    private fun verifyProot(): Boolean {
+        val code = execOnce("proot", "--version")
+        if (code == 0) {
+            emitLog("[bootstrap] proot 启动校验通过")
+        }
+        return code == 0
+    }
+
+    /** Rewrite paths embedded in proot-distro metadata/scripts after relocation. */
+    private fun repairProotDistroPaths() {
+        val prefix = installer.rootDir.absolutePath
+        val oldPrefix = "/data/data/com.termux/files/usr"
+        val roots = listOf(
+            File(prefix, "bin"),
+            File(prefix, "usr/bin"),
+            File(prefix, "etc/proot-distro"),
+            File(prefix, "usr/etc/proot-distro"),
+            File(prefix, "usr/share/proot-distro")
+        )
+        var fixed = 0
+        roots.filter { it.exists() }.forEach { root ->
+            val isConfigTree = root.path.contains("${File.separator}proot-distro")
+            root.walkTopDown().filter { it.isFile && it.length() <= 512 * 1024 }.forEach { file ->
+                runCatching {
+                    // ELF files can contain the old path in RPATH/debug strings.
+                    // Never read/write them as text: doing so corrupts proot.bin,
+                    // apt-get and every other native executable.
+                    val bytes = file.inputStream().use { input ->
+                        val head = ByteArray(4)
+                        val count = input.read(head)
+                        if (count == 4 && head.contentEquals(byteArrayOf(0x7f, 'E'.code.toByte(), 'L'.code.toByte(), 'F'.code.toByte()))) {
+                            return@runCatching
+                        }
+                        head
+                    }
+                    val content = file.readText()
+                    if (!isConfigTree && !content.startsWith("#!")) return@runCatching
+                    if (content.indexOf('\u0000') >= 0) return@runCatching
+                    if (content.contains(oldPrefix)) {
+                        file.writeText(content.replace(oldPrefix, prefix))
+                        if (!isConfigTree) file.setExecutable(true, false)
+                        fixed++
+                    }
+                }
+            }
+        }
+        // proot itself probes this path even when TMPDIR is inherited.
+        File(prefix, "tmp").mkdirs()
+        File(prefix, "data/data/com.termux/files/usr/tmp").mkdirs()
+        if (fixed > 0) emitLog("[bootstrap] 修复 $fixed 个 proot-distro 路径")
+    }
+
     fun execOnce(vararg command: String, env: Map<String, String> = emptyMap()): Int =
         executor.execOnce(*command, env = env)
+
+    fun execOnceWithTimeout(
+        timeoutMs: Long,
+        vararg command: String,
+        env: Map<String, String> = emptyMap()
+    ): Int = executor.execOnceWithTimeout(timeoutMs, *command, env = env)
 
     /**
      * 执行 Termux shell 命令，输出逐行回调（Termux 终端面板专用，不与 MC 日志混流）。
@@ -182,11 +861,74 @@ class TermuxRuntime(context: Context) {
         return n
     }
 
+    /** Repair commands unpacked by dpkg after the bootstrap startup pass. */
+    fun repairInstalledCommands(): Int =
+        fixUsrBin() + fixScriptsOnce() + ensureRootfsExecutable()
+
     /**
      * 升级已装环境的 dpkg 包装脚本到新版（幂等）。
      * 新版 wrapper 在解压后：归位 compat 链接 + 补 bin 链接 + --configure 时改写新装脚本路径。
      * 旧版（无 compat 归位逻辑）→ 用 ensureDpkgWrapper() 重写。
      */
+    /**
+     * 启动服务端前的幂等环境修复，只处理缺失或损坏的运行时文件。
+     */
+    fun autoRepairRuntime(javaVersion: JavaVersion, needsFonts: Boolean): Int {
+        if (!isReady()) return 0
+        val prefix = installer.rootDir
+        if (javaVersion == JavaVersion.Java8) {
+            val ready = java8UbuntuReady() || runBlocking { installJava8Ubuntu() }
+            if (!ready) {
+                emitLog("[repair] Java 8 Ubuntu ARM64 运行环境不可用")
+                return 0
+            }
+            val fontsReady = !needsFonts || runUbuntu(
+                "test -f /etc/fonts/fonts.conf && test -x /usr/bin/fc-cache",
+                60_000
+            ) == 0
+            if (!fontsReady) {
+                emitLog("[repair] 正在补全 Ubuntu 字体运行库...")
+                val code = runUbuntu(
+                    "export DEBIAN_FRONTEND=noninteractive; " +
+                        "apt-get update -o Acquire::Retries=2 -o Acquire::http::Timeout=30 -o Acquire::https::Timeout=30 && " +
+                        "apt-get install -y ca-certificates fontconfig fonts-dejavu-core && fc-cache -f",
+                    300_000
+                )
+                if (code != 0) emitLog("[repair] Ubuntu 字体运行库修复失败，将继续尝试无图形模式启动")
+            }
+            return 0
+        }
+        listOf(
+            File(prefix, "tmp"),
+            File(prefix, "home"),
+            File(prefix, "usr/bin"),
+            File(prefix, "etc/fonts"),
+            File(prefix, "var/lib/dpkg"),
+            File(prefix, "var/cache/apt/archives")
+        ).forEach { it.mkdirs() }
+
+        var repaired = fixDpkgWrapper() + fixUsrBin() + ensureRootfsExecutable()
+        repaired += fixScriptsOnce() + fixAptSources() + ensureAptConfigs()
+        repaired += ensureJvmComplete()
+        fixJavaSymlinks(javaVersion)
+
+        if (needsFonts) {
+            if (!fontRuntimeReady(javaVersion)) {
+                emitLog("[repair] 正在补齐字体运行库...")
+                execOnce(
+                    "apt-get", "-o", "DPkg::Lock::Timeout=60", "install",
+                    "--allow-unauthenticated", "-y", "fontconfig", "ttf-dejavu"
+                )
+                repaired += fixUsrBin() + ensureRootfsExecutable()
+            }
+            if (repairFontRuntime()) repaired++
+            else emitLog("[repair] 字体缓存生成失败，将继续使用无图形模式启动")
+        }
+
+        if (repaired > 0) emitLog("[repair] 自动修复完成，共处理 $repaired 项")
+        return repaired
+    }
+
     fun fixDpkgWrapper(): Int {
         val dpkg = File(installer.rootDir, "bin/dpkg")
         if (!dpkg.exists()) return 0
@@ -333,7 +1075,7 @@ class TermuxRuntime(context: Context) {
                 // 目标完整则跳过——避免反复移动 jvm 导致 libjli.so 缺失
                 val compatJvm = File(compatUsr, "lib/jvm")
                 val prefixJvm = File(prefix, "lib/jvm")
-                if (isRealDir(compatJvm) && !jvmIsComplete(prefixJvm)) {
+                if (isRealDir(compatJvm) && !jvmRootHasCompleteJava(prefixJvm)) {
                     prefixJvm.deleteRecursively()
                     prefixJvm.parentFile?.mkdirs()
                     runCatching { compatJvm.renameTo(prefixJvm) }
@@ -525,36 +1267,56 @@ class TermuxRuntime(context: Context) {
      */
     fun refreshTermux(): Int = syncCompatAndLinks() + fixScriptsOnce()
 
-    /** 判断 jvm 目录是否完整（bin/java + libjli.so 或 libjava.so 存在） */
-    private fun jvmIsComplete(jvmRoot: File): Boolean {
-        if (!jvmRoot.isDirectory) return false
-        val jvmDir = jvmRoot.listFiles()?.firstOrNull { it.isDirectory && it.name.contains("openjdk") }
-            ?: return false
+    /** 判断指定 Java 版本目录是否完整（bin/java + libjli.so 或 libjava.so 存在）。 */
+    private fun isJavaComplete(version: JavaVersion): Boolean {
+        if (version == JavaVersion.Java8) return java8UbuntuReady()
+        return javaCandidates(version).any { path ->
+        val jvmDir = File(path)
         val binJava = File(jvmDir, "bin/java")
         val libJli = File(jvmDir, "lib/jli/libjli.so")
         val libJava = File(jvmDir, "lib/libjava.so")
-        return binJava.isFile && (libJli.isFile || libJava.isFile)
+        binJava.isFile && (libJli.isFile || libJava.isFile)
+        }
     }
 
+    /** 用于 compat 归位：任意一个已知 JDK 完整即可避免移动整个 jvm 目录。 */
+    private fun jvmRootHasCompleteJava(jvmRoot: File): Boolean =
+        JavaVersion.values().filter { it != JavaVersion.Java8 }.any { version ->
+            File(jvmRoot, version.directoryName).let { jvmDir ->
+                File(jvmDir, "bin/java").isFile &&
+                    (File(jvmDir, "lib/jli/libjli.so").isFile || File(jvmDir, "lib/libjava.so").isFile)
+            }
+        }
+
     /**
-     * 启动时校验 jvm 完整性：不完整（如杀后台/覆盖安装后 libjli.so 缺失）→
-     * 自动 `apt-get install -f openjdk-25` 重装并重新归位，杜绝反复 libjli.so 崩溃。
+     * 启动时校验已安装的 JDK：不完整（如杀后台/覆盖安装后 libjli.so 缺失）时，
+     * 仅重装对应版本。未安装的 JDK 不会被隐式安装。
      */
     fun ensureJvmComplete(): Int {
-        val prefix = installer.rootDir.absolutePath
-        val jvmRoot = File(prefix, "lib/jvm")
-        if (jvmIsComplete(jvmRoot)) return 0
-        Log.w(TAG, "ensureJvmComplete: jvm incomplete, reinstalling openjdk-25")
-        installer.onLog?.invoke("[bootstrap] jvm 不完整，重新安装 openjdk-25...")
-        try {
-            executor.execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "install", "--allow-unauthenticated", "-y", "-f", "openjdk-25")
-            // 重装后 jvm 可能在 compat，重新归位 + 重建 wrapper
-            fixUsrBin()
-            fixJavaSymlinks()
-        } catch (e: Exception) {
-            Log.w(TAG, "ensureJvmComplete: reinstall failed: ${e.message}")
+        var repaired = 0
+        JavaVersion.values().forEach { version ->
+            if (!isJavaInstalled(version) || isJavaComplete(version)) return@forEach
+
+            installer.onLog?.invoke("[bootstrap] ${version.displayName} 运行环境不完整，正在修复...")
+            if (version == JavaVersion.Java8) {
+                val repairedJava8 = runBlocking { installJava8Ubuntu() }
+                if (repairedJava8) repaired++
+                else installer.onLog?.invoke("[bootstrap] Java 8 Ubuntu ARM64 运行时自动修复失败")
+                return@forEach
+            }
+            val code = execOnce(
+                "apt-get", "-o", "DPkg::Lock::Timeout=60", "install", "--reinstall",
+                "--allow-unauthenticated", "-y", version.packageName
+            )
+            if (code == 0 && isJavaComplete(version)) {
+                repaired++
+                installer.onLog?.invoke("[bootstrap] ${version.displayName} 运行环境已修复")
+            } else {
+                installer.onLog?.invoke("[bootstrap] 警告: ${version.displayName} 运行环境修复失败")
+            }
         }
-        return if (jvmIsComplete(jvmRoot)) 1 else 0
+        fixJavaSymlinks()
+        return repaired
     }
 
     /**
@@ -649,7 +1411,7 @@ class TermuxRuntime(context: Context) {
         fixRootfsPermissions()
         executor.execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "update", "--allow-insecure-repositories", "-y")
         // 安装 openjdk-25：Paper 26.x / MC 26.1+ 要求 Java 25+，openjdk-17 已不够
-        executor.execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "install", "--allow-unauthenticated", "-y", "openjdk-25", "wget", "curl")
+        executor.execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "install", "--allow-unauthenticated", "-y", "wget", "curl")
         executor.execOnce("apt-get", "-o", "DPkg::Lock::Timeout=60", "clean")
 
         // 修复 openjdk 符号链接：dpkg-wrapper 的 configure 是 no-op，
@@ -661,8 +1423,8 @@ class TermuxRuntime(context: Context) {
     }
 
     /**
-     * 修复 openjdk-17 命令可用性（wrapper 脚本方案）。
-     * Termux openjdk-17 实际安装在 $PREFIX/lib/jvm/java-17-openjdk/，
+     * 修复默认 OpenJDK 命令可用性（wrapper 脚本方案）。
+     * Termux OpenJDK 实际安装在 $PREFIX/lib/jvm/java-xx-openjdk/，
      * 但 dpkg-wrapper 跳过了 configure，post-install 脚本未执行，
      * 需要手动在 $PREFIX/bin/ 下创建 java/javac/jar 等命令。
      *
@@ -673,23 +1435,28 @@ class TermuxRuntime(context: Context) {
      *
      * 注意：由于 dpkg-deb -x 解压 deb 时 compat 符号链接被覆盖，
      * 文件实际落在了 $PREFIX/data/data/com.termux/files/usr/lib/jvm/java-17-openjdk/。
-     * 所以需要从两个位置查找 java。
+     * 所以需要从两个位置查找 java。默认 wrapper 选择已安装的最高版本。
      */
-    fun fixJavaSymlinks() {
+    fun fixJavaSymlinks(preferredVersion: JavaVersion? = null) {
         val prefix = installer.rootDir.absolutePath
 
-        // 查找 jvm 实际目录（优先 java-25-openjdk，回退 java-21/17）
-        val jvmCandidates = listOf(
-            File(prefix, "lib/jvm/java-25-openjdk"),
-            File(prefix, "data/data/com.termux/files/usr/lib/jvm/java-25-openjdk"),
-            File(prefix, "lib/jvm/java-21-openjdk"),
-            File(prefix, "data/data/com.termux/files/usr/lib/jvm/java-21-openjdk"),
-            File(prefix, "lib/jvm/java-17-openjdk"),
-            File(prefix, "data/data/com.termux/files/usr/lib/jvm/java-17-openjdk")
-        )
-        val jvmDir = jvmCandidates.firstOrNull { it.exists() }
+        val selectedVersion = (preferredVersion?.takeIf(::isJavaComplete)
+            ?: JavaVersion.values().sortedByDescending { it.ordinal }.firstOrNull(::isJavaComplete))
+            ?: run {
+                if (installedJavaVersions().isNotEmpty()) {
+                    installer.onLog?.invoke("[bootstrap] 警告: 未找到完整的 OpenJDK 安装目录，跳过 wrapper 修复")
+                }
+                Log.w(TAG, "fixJavaSymlinks: no complete JDK found")
+                return
+            }
+        if (selectedVersion == JavaVersion.Java8) {
+            Log.i(TAG, "fixJavaSymlinks: Java 8 runs inside Ubuntu; no Termux wrapper needed")
+            return
+        }
+        val jvmCandidates = javaCandidates(selectedVersion).map(::File)
+        val jvmDir = jvmCandidates.firstOrNull { it.isDirectory }
         if (jvmDir == null) {
-            installer.onLog?.invoke("[bootstrap] 警告: 未找到 openjdk 安装目录，跳过符号链接修复")
+            installer.onLog?.invoke("[bootstrap] 警告: 未找到完整的 OpenJDK 安装目录，跳过 wrapper 修复")
             Log.w(TAG, "fixJavaSymlinks: jvmDir not found in candidates: ${jvmCandidates.map { it.absolutePath }}")
             return
         }
@@ -761,7 +1528,7 @@ class TermuxRuntime(context: Context) {
                 Log.w(TAG, "fixJavaSymlinks: batch chmod failed: $out")
             }
         }
-        installer.onLog?.invoke("[bootstrap] openjdk-17 wrapper 脚本创建完成: $created 个命令已就绪")
+        installer.onLog?.invoke("[bootstrap] ${selectedVersion.displayName} wrapper 脚本已创建完成: $created 个命令已就绪")
         Log.i(TAG, "fixJavaSymlinks: created $created wrappers in $termuxBinDir")
     }
 
@@ -802,12 +1569,144 @@ class TermuxRuntime(context: Context) {
         }
     }
 
+    /** Start Java 8 in Ubuntu/glibc; the host server directory is exposed as /srv/mineserve. */
+    private fun startMcInUbuntu(
+        jarPath: String,
+        maxHeapMb: Int,
+        serverDir: File,
+        onExit: (Int) -> Unit,
+        launchArgs: String?,
+        logFile: File
+    ): Process {
+        if (!java8UbuntuReady()) {
+            emitLog("[startMc] Java 8 Ubuntu ARM64 运行环境未安装或不完整")
+            throw RuntimeException("Java 8 Ubuntu runtime is not ready")
+        }
+        val guestDir = "/srv/mineserve"
+        val guestJar = "$guestDir/${File(jarPath).relativeTo(serverDir).invariantSeparatorsPath}"
+        val guestLaunchArgs = launchArgs?.replace(serverDir.absolutePath, guestDir)
+        val isLegacyForgeLaunch = launchArgs?.trim()?.startsWith("-jar") == true &&
+            launchArgs.contains("forge-")
+        val launchesVerifiedLibraryJar = isLegacyForgeLaunch &&
+            launchArgs?.contains("libraries/", ignoreCase = true) == true
+        val forgeServerClasspath = if (launchesVerifiedLibraryJar) {
+            "forge_jar=\"${'$'}(find libraries/net/minecraftforge/forge -type f -name 'forge-*.jar' -print -quit 2>/dev/null)\"; " +
+                "if [ -z \"${'$'}forge_jar\" ] || ! jar tf \"${'$'}forge_jar\" 2>/dev/null | grep -q 'net/minecraftforge/fml/relauncher/ServerLaunchWrapper.class'; then " +
+                "echo '[startMc] Java 8 Forge: verified ServerLaunchWrapper is missing'; exit 1; fi; " +
+                "forge_classpath=\"${'$'}(find libraries -type f -name '*.jar' -printf '%p:' 2>/dev/null)${'$'}(find . -maxdepth 1 -type f -name 'minecraft_server.*.jar' -printf '%p:' 2>/dev/null)\"; "
+        } else ""
+        val forgeLibraryRepair = if (isLegacyForgeLaunch && !launchesVerifiedLibraryJar) {
+            "forge_jar=\"${'$'}(find libraries/net/minecraftforge/forge -type f -name 'forge-*.jar' -print -quit 2>/dev/null)\"; " +
+                "if [ -n \"${'$'}forge_jar\" ]; then forge_target=\"${'$'}(basename \"${'$'}forge_jar\")\"; " +
+                "if ! cmp -s \"${'$'}forge_jar\" \"${'$'}forge_target\" 2>/dev/null; then " +
+                "cp -f \"${'$'}forge_jar\" \"${'$'}forge_target\" && echo '[startMc] Java 8 Forge: restored launch jar from verified library'; fi; fi; "
+        } else ""
+        val javaArguments = if (launchesVerifiedLibraryJar) {
+            "-cp \"${'$'}forge_classpath\" net.minecraftforge.fml.relauncher.ServerLaunchWrapper"
+        } else {
+            guestLaunchArgs ?: "-jar '$guestJar'"
+        }
+        val command = "export JAVA_HOME=$ubuntuJava8Home; " +
+            "export PATH=\"/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\"; " +
+            "export TMPDIR=/tmp; export HOME=/root; export FONTCONFIG_PATH=/etc/fonts; " +
+            "cd '$guestDir' && $forgeLibraryRepair$forgeServerClasspath exec /usr/bin/java " +
+            "-Djava.awt.headless=true -Djava.io.tmpdir=/tmp " +
+            "-Doshi.util.use.jna=false -Djna.nosys=true " +
+            "-Dio.netty.transport.noNative=true -Dio.netty.transport.epoll.enabled=false " +
+            "-Dio.netty.transport.kqueue.enabled=false -Djava.net.preferIPv4Stack=true " +
+            "-Xmx${maxHeapMb}m -Xms${maxHeapMb / 2}m $javaArguments nogui"
+        val rootfs = java8Rootfs
+        // PRoot creates glue files outside the guest rootfs. Keep this path in
+        // the app-owned prefix; Termux's compatibility /usr/tmp may be absent
+        // or inaccessible on newer Android storage namespaces.
+        val prootTmp = File(installer.rootDir, "tmp/java8-proot").apply {
+            mkdirs()
+            setReadable(true, false)
+            setWritable(true, false)
+            setExecutable(true, false)
+        }
+        val sharedMemory = File(rootfs, "tmp").apply {
+            mkdirs()
+            setReadable(true, false)
+            setWritable(true, false)
+            setExecutable(true, false)
+        }
+        val resolver = prepareUbuntuDns(rootfs)
+        val proot = listOf(
+            File(installer.rootDir, "bin/proot"),
+            File(installer.rootDir, "usr/bin/proot")
+        ).firstOrNull { it.isFile && it.canExecute() }
+            ?: throw RuntimeException("proot is not available")
+        val process = ProcessBuilder(
+            "/system/bin/sh", "-c",
+            "export PROOT_TMP_DIR='${prootTmp.absolutePath}'; " +
+                "export TMPDIR='${prootTmp.absolutePath}'; exec " +
+                listOf(
+                    proot.absolutePath, "--kill-on-exit", "--link2symlink", "--sysvipc", "-L", "--change-id=0:0",
+            "--rootfs=${rootfs.absolutePath}", "--cwd=/root",
+            "--bind=/dev", "--bind=/proc", "--bind=/sys", "--bind=/dev/urandom:/dev/random",
+            "--bind=${sharedMemory.absolutePath}:/dev/shm", "--bind=${resolver.absolutePath}:/etc/resolv.conf",
+            "--bind=${serverDir.absolutePath}:$guestDir",
+            "/usr/bin/env", "-i",
+            "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+            "HOME=/root", "TMPDIR=/tmp", "LANG=C.UTF-8", "DEBIAN_FRONTEND=noninteractive",
+            "/bin/sh", "-lc", command
+                ).joinToString(" ") { shellQuote(it) }
+        ).apply {
+            redirectErrorStream(true)
+            directory(serverDir)
+            environment().putAll(executor.termuxEnv())
+            environment()["PROOT_TMP_DIR"] = prootTmp.absolutePath
+            environment()["TMPDIR"] = prootTmp.absolutePath
+        }.start()
+        emitLog("[startMc] Java 8 PRoot 临时目录: ${prootTmp.absolutePath}")
+        Log.i(TAG, "startMc Ubuntu Java 8 command: $command")
+        if (isLegacyForgeLaunch) emitLog("[startMc] Java 8 Forge: validating launch jar from verified library")
+        if (launchesVerifiedLibraryJar) {
+            emitLog("[startMc] Java 8 Forge: using ServerLaunchWrapper classpath mode")
+        }
+        emitLog("[startMc] java 路径: Ubuntu:/usr/bin/java (openjdk-8-jdk)")
+        emitLog("[startMc] 正在启动 Java 8 服务端...")
+        mcProcess = process
+        mcStdin = process.outputStream
+        Thread({
+            try {
+                val writer = java.io.BufferedWriter(java.io.OutputStreamWriter(
+                    java.io.FileOutputStream(logFile, true), Charsets.UTF_8), 8192)
+                val reader = process.inputStream.bufferedReader()
+                var line = reader.readLine()
+                var lineCount = 0
+                while (line != null) {
+                    executor.emit(line)
+                    writer.appendLine(line)
+                    if (++lineCount % 50 == 0) writer.flush()
+                    line = reader.readLine()
+                }
+                writer.flush()
+                writer.close()
+            } catch (e: Exception) {
+                Log.w(TAG, "Ubuntu Java 8 stdout reader error: ${e.message}")
+            }
+        }, "mc-ubuntu-stdout-reader").start()
+        Thread({
+            val code = process.waitFor()
+            Log.w(TAG, "Ubuntu Java 8 MC process exited code=$code")
+            emitLog("[startMc] Java 8 服务端已退出 (exit=$code)")
+            mcProcess = null
+            mcStdin = null
+            onExit(code)
+        }, "mc-ubuntu-watch").start()
+        return process
+    }
+
+    private fun shellQuote(value: String): String = "'${value.replace("'", "'\\''")}'"
+
     /**
      * 直接用 ProcessBuilder 启动 MC 服务（不再依赖 tmux）。
      * stdout/stderr 实时推送到 consoleFlow，同时写入日志文件。
      * onExit 回调在 MC 进程退出时触发。
      */
-    fun startMc(jarPath: String, maxHeapMb: Int, dirName: String, onExit: (Int) -> Unit, launchArgs: String? = null): Process {
+    fun startMc(jarPath: String, maxHeapMb: Int, dirName: String, javaVersion: JavaVersion = JavaVersion.Java17, onExit: (Int) -> Unit, launchArgs: String? = null): Process {
         Log.i(TAG, "startMc: jar=$jarPath heap=${maxHeapMb}m dirName=$dirName")
 
         // 如果已有进程在运行，先停止
@@ -823,8 +1722,12 @@ class TermuxRuntime(context: Context) {
         // 占着 world/session.lock → 新实例启动报 already locked）
         killOrphanMcProcess(serverDir)
 
-        // 探测 java 实际路径并自动修复符号链接
-        val javaPath = ensureJavaReady() ?: run {
+        if (javaVersion == JavaVersion.Java8) {
+            return startMcInUbuntu(jarPath, maxHeapMb, serverDir, onExit, launchArgs, logFile)
+        }
+
+        // Java 17/25 continue to use the existing Termux-hosted launch path.
+        val javaPath = resolveJavaPath(prefix, javaVersion) ?: run {
             emitLog("[startMc] 错误: java 未找到，openjdk 可能未安装。请删除 Termux 环境后重新初始化")
             throw RuntimeException("java not found in Termux environment")
         }
@@ -837,26 +1740,29 @@ class TermuxRuntime(context: Context) {
         // compat 路径：dpkg-deb -x 解包时 compat 符号链接被覆盖，文件实际落在此处
         val compatUsr = "$prefix/data/data/com.termux/files/usr"
         // jvmLibDir：从 javaPath 推导其父目录的 lib 子目录（javaPath = .../bin/java → 父=bin → 父=jvm目录 → lib）
-        val jvmLibDir = File(javaPath).parentFile?.parentFile?.let { File(it, "lib") }?.absolutePath ?: "$prefix/lib/jvm/java-25-openjdk/lib"
-        // 兜底：包含所有可能的 jvm lib 目录（java-25/21/17），兼容已安装的多个 JDK
-        val allJvmLibs = listOf(
-            "$prefix/lib/jvm/java-25-openjdk/lib",
-            "$prefix/lib/jvm/java-25-openjdk/lib/server",
-            "$prefix/lib/jvm/java-21-openjdk/lib",
-            "$prefix/lib/jvm/java-21-openjdk/lib/server",
-            "$prefix/lib/jvm/java-17-openjdk/lib",
-            "$prefix/lib/jvm/java-17-openjdk/lib/server",
-            "$prefix/data/data/com.termux/files/usr/lib/jvm/java-25-openjdk/lib",
-            "$prefix/data/data/com.termux/files/usr/lib/jvm/java-25-openjdk/lib/server"
-        ).joinToString(":")
-        val javaCmd = "export PATH='$jvmBinDir:$prefix/bin:$compatUsr/bin:$prefix/bin/applets:$prefix/libexec:/system/bin:/system/xbin'; " +
+        val jvmLibDir = File(javaPath).parentFile?.parentFile?.let { File(it, "lib") }?.absolutePath
+            ?: "$prefix/lib/jvm/java-25-openjdk/lib"
+        // 兜底：将每个受支持版本及 compat 路径加入库搜索路径。
+        val allJvmLibs = JavaVersion.values().flatMap { version ->
+            javaCandidates(version).flatMap { candidate ->
+                listOf("$candidate/lib", "$candidate/lib/server")
+            }
+        }.joinToString(":")
+        val nativeAccessArg = if (javaVersion == JavaVersion.Java25) "--enable-native-access=ALL-UNNAMED " else ""
+        val javaCmd = "export PATH='$jvmBinDir:$prefix/bin:$prefix/usr/bin:$compatUsr/bin:$prefix/bin/applets:$prefix/libexec:/system/bin:/system/xbin'; " +
             "export LD_LIBRARY_PATH='$prefix/lib:$compatUsr/lib:$prefix/usr/lib:$jvmLibDir:$jvmLibDir/server:$allJvmLibs:/system/lib64'; " +
+            "export FONTCONFIG_PATH='$prefix/etc/fonts'; " +
+            "export FONTCONFIG_FILE='$prefix/etc/fonts/fonts.conf'; " +
             "export PREFIX='$prefix'; " +
             "export HOME='$prefix/home'; " +
             "export TMPDIR='$prefix/tmp'; " +
             "export JAVA_HOME='${File(javaPath).parentFile?.parent}'; " +
             "cd '$serverDir' && " +
-            "'$javaPath' -Djava.io.tmpdir='$prefix/tmp' -Xmx${maxHeapMb}m -Xms${maxHeapMb / 2}m " + (launchArgs ?: "-jar $jarPath") + " nogui"
+            "'$javaPath' $nativeAccessArg-Djava.awt.headless=true -Djava.io.tmpdir='$prefix/tmp' " +
+            "-Doshi.util.use.jna=false -Djna.nosys=true " +
+            "-Dio.netty.transport.noNative=true -Dio.netty.transport.epoll.enabled=false " +
+            "-Dio.netty.transport.kqueue.enabled=false -Djava.net.preferIPv4Stack=true " +
+            "-Xmx${maxHeapMb}m -Xms${maxHeapMb / 2}m " + (launchArgs ?: "-jar $jarPath") + " nogui"
 
         Log.i(TAG, "startMc command: $javaCmd")
 
@@ -998,20 +1904,25 @@ class TermuxRuntime(context: Context) {
      * 4. 通过 find 命令查找
      * 找不到时返回 "java"，让 shell 报错（便于诊断）
      */
-    private fun resolveJavaPath(prefix: String): String {
+    private fun resolveJavaPath(prefix: String, version: JavaVersion? = null): String? {
+        if (version != null) {
+            return javaCandidates(version).map { "$it/bin/java" }
+                .firstOrNull {
+                    val file = File(it)
+                    file.exists() && (version == JavaVersion.Java8 || file.canExecute())
+                }
+        }
         // 候选路径列表（含 compat 目录下的实际路径）
-        val candidates = listOf(
-            "$prefix/bin/java",
-            "$prefix/lib/jvm/java-25-openjdk/bin/java",
-            "$prefix/lib/jvm/java-21-openjdk/bin/java",
-            "$prefix/lib/jvm/java-17-openjdk/bin/java",
-            // deb 解压实际落点：compat 符号链接被 deb 内的目录结构覆盖后，
-            // 文件实际解到了 $PREFIX/data/data/com.termux/files/usr/...
-            "$prefix/data/data/com.termux/files/usr/lib/jvm/java-25-openjdk/bin/java",
-            "$prefix/data/data/com.termux/files/usr/lib/jvm/java-21-openjdk/bin/java",
-            "$prefix/data/data/com.termux/files/usr/lib/jvm/java-17-openjdk/bin/java",
-            "/system/bin/java"
-        )
+        val candidates = buildList {
+            add("$prefix/bin/java")
+            JavaVersion.values().sortedByDescending { it.ordinal }.forEach { supportedVersion ->
+                addAll(javaCandidates(supportedVersion).map { "$it/bin/java" })
+            }
+            // 兼容旧环境中曾安装的 Java 21。
+            add("$prefix/lib/jvm/java-21-openjdk/bin/java")
+            add("$prefix/data/data/com.termux/files/usr/lib/jvm/java-21-openjdk/bin/java")
+            add("/system/bin/java")
+        }
         for (path in candidates) {
             val f = File(path)
             if (f.exists() && f.canExecute()) {
@@ -1045,7 +1956,7 @@ class TermuxRuntime(context: Context) {
         // 兜底：返回 "java"，让 shell 报错
         Log.w(TAG, "resolveJavaPath: java not found in any candidate path, fallback to 'java'")
         emitLog("[startMc] 错误: java 未找到，请检查 openjdk-17 是否已安装")
-        return "java"
+        return candidates.firstOrNull { File(it).exists() && File(it).canExecute() }
     }
 
     /**
@@ -1057,21 +1968,21 @@ class TermuxRuntime(context: Context) {
     fun createSnapshot(maxSnapshots: Int = 0, dirName: String = "default"): String? {
         val serverDir = File(installer.rootDir, "home/servers/$dirName")
         // MC 1.16+ 维度目录与 world 平级：world / world_nether / world_the_end
-        val worldDir = File(serverDir, "world")
+        val worlds = listOf("world", "world_nether", "world_the_end", "worlds")
+            .map { File(serverDir, it) }
+            .filter { it.isDirectory }
         val snapshotDir = File(installer.rootDir, "home/snapshots").apply { mkdirs() }
         val ts = SimpleDateFormat("yyyyMMdd_HHmmss", Locale.US).format(Date())
         val outFile = File(snapshotDir, "world_$ts.zip")
 
-        if (!worldDir.exists()) {
+        if (worlds.isEmpty()) {
             Log.w(TAG, "createSnapshot: world 目录不存在")
             return null
         }
         return try {
             ZipOutputStream(FileOutputStream(outFile)).use { zos ->
                 // 同步备份主世界、地狱、末地三个维度目录（存在的才打包，zip 保留目录层级）
-                val dirs = listOf(worldDir, File(serverDir, "world_nether"), File(serverDir, "world_the_end"))
-                    .filter { it.exists() }
-                dirs.forEach { root ->
+                worlds.forEach { root ->
                     root.walkTopDown().forEach { file ->
                         val relPath = file.relativeTo(serverDir).path
                         if (file.isDirectory) {
@@ -1122,5 +2033,7 @@ class TermuxRuntime(context: Context) {
         }
     }
 
-    companion object { private const val TAG = "TermuxRuntime" }
+    companion object {
+        private const val TAG = "TermuxRuntime"
+    }
 }
